feat: add trainee data integration route with chatbot